# novel-bot

./: .code-style.md  .gitignore  CLAUDE.md  README.md  login_interactive.py  pyproject.toml
config/: settings.yaml
data/: books.json
scripts/: auto_publish.py  batch_publish.py
src/novel_bot/: cli.py  config.py  models.py  orchestrator.py
src/novel_bot/login/: __init__.py  manager.py
src/novel_bot/monitor/: __init__.py  logger.py  verifier.py
src/novel_bot/parser/: __init__.py  base.py  docx.py  markdown.py  txt.py
src/novel_bot/publisher/: __init__.py  base.py  tomato.py
src/novel_bot/scheduler/: __init__.py
tests/: conftest.py  test_cli.py  test_config.py  test_logger.py  test_login.py  test_models.py  test_orchestrator.py  test_publisher.py  test_scheduler.py  test_verifier.py
tests/parser/: test_base.py  test_docx.py  test_markdown.py  test_txt.py
