[project]
name = "novel-bot"
version = "0.1.0"
description = "Auto-publish novel manuscripts to Tomato Novel platform"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0",
    "python-docx>=1.1.0",
    "click>=8.1.0",
    "aiohttp>=3.13.5",
]

[dependency-groups]
dev = [
    "apscheduler>=3.11.2",
    "click>=8.3.2",
    "playwright>=1.58.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
novel-bot = "novel_bot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/novel_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
